--- a/supervisor/geekz.conf
+++ b/supervisor/geekz.conf
@@ -7,4 +7,4 @@ stderr_logfile=/srv/logs/gunicorn/geekz.error.log
 autostart=true
 autorestart=true
 redirect_stderr=true
-environment=DJANGO_SETTINGS_MODULE='settings'
+environment=DJANGO_SETTINGS_MODULE='geekz.settings'
